# swikernel

./: CMakeLists.txt  LICENSE  Makefile  README.md  RELEASE_NOTES.md  ZH.README.md  push_to_github.sh
config/: swikernel.conf
config/presets/: desktop.conf  minimal.conf  server.conf
docs/: INSTALL.md  TROUBLESHOOTING.md
include/: asm_syscalls.h  common_defs.h
include/kernel/: dependency_check.h  kernel.h
include/system/: system.h
include/tui/: config_manager.h  feedback_system.h  file_manager.h  i18n.h  keyboard.h  layout_manager.h  log_viewer.h  plugin_system.h  system_monitor.h  theme_manager.h  tui.h
include/utils/: auto_complete.h  config_parser.h  error_handler.h  logger.h  progress_bar.h
scripts/: post_install.sh  rollback_helper.sh  setup_deps.sh
src/asm_optimized/: crypto_ops.asm  memory_ops.asm  string_ops.asm
src/core/: main.c  swikernel.h  version.h
src/kernel/: dependency_check.c  kernel.h  kernel_install.c  kernel_manager.c  kernel_rollback.c
src/system/: file_ops.c  process.c  syscalls.asm  system.h
src/tui/: autocomplete.c  config_manager.c  feedback_system.c  file_manager.c  i18n.c  keyboard.c  layout_manager.c  log_viewer.c  plugin_system.c  system_monitor.c  theme_manager.c  tui.h  tui_core.c  tui_dialogs.c
src/utils/: config_parser.c  error_handler.c  logger.c  progress_bar.c  utils.h
tests/: test_install.c  test_kernel.c  test_utils.c
